--- a/app/assets/stylesheets/dashboards/_show.scss
+++ b/app/assets/stylesheets/dashboards/_show.scss
@@ -59,13 +59,19 @@
   background-color: #1D3D57;
   padding: 20px 0 20px 0;
 
-  .nav-item {
-    color: #EBE7D6;
-    text-decoration: none;
-    // font-size: 20px;
+  .icon-style {
+    width: 60px;
+    height: 60px;
     background-color: #FF6E41;
-    padding: 20px;
     border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .nav-item {
+      color: #EBE7D6;
+      text-decoration: none;
+    }
   }
 }
 
