--- a/app/views/exercices/index.html.erb
+++ b/app/views/exercices/index.html.erb
@@ -22,7 +22,7 @@
         <div class="exercice-card">
           <%= link_to exercice_path(exercice), class:"exercice-link" do %>
           <li>
-          <div class="exercice-img">
+          <div class="img-exercices">
               <p><%= image_tag exercice.img, width: "150", height: "150"%></p>
             </div>
 
