--- a/app/views/exercices/show.html.erb
+++ b/app/views/exercices/show.html.erb
@@ -10,15 +10,11 @@
     </div>
   </div>
   <div class="exercice">
-    <div class="img-exercice">
-      </div>
-    </div>
     <div class="exercice-text">
-      <div class="exercice-title">
-        <p><%= image_tag @exercice.img, width: "150", height: "150" %></p>
-        <h4><%= @exercice.title %></h4>
-        <h5><strong><%= @exercice.category %></strong></h5>
-      <p><%= @exercice.description %></p>
+        <p class="ex-img"><%= image_tag @exercice.img, class:"img-exercice" %></p>
+        <h2><%= @exercice.title %></h2>
+        <h4><strong><%= @exercice.category %></strong></h4>
+        <p><%= @exercice.description %></p>
     </div>
   </div>
 </div>
