front food presque terminé, il faut juste ajouter des photos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 @import "meals/index";
 @import "dashboards/index";
 @import "exercices/index";
-@import "profils/index"
+@import "profils/index";
+@import "foods/index"
