--- a/app/assets/stylesheets/devise/registrations/_new.scss
+++ b/app/assets/stylesheets/devise/registrations/_new.scss
@@ -1,7 +1,9 @@
+.sessions-f {
+  background-color: #1D3D57;
+}
 .sessions {
   background-color: #1D3D57;
   height: 100vh;
-  // overflow-y: auto;
 }
 
 .logo-registration {
@@ -19,6 +21,7 @@
 }
 
 .btn-sign-up {
+  display: flex;
   text-align: center;
   color: black;
   text-decoration: none;
@@ -30,4 +33,13 @@
   margin-bottom: 30px;
   margin-top: 30px;
   width: 60%;
+}
+.btn-validate-form {
+  display: flex;
+  justify-content: space-around
+}
+
+.btn-summary {
+  display: flex;
+  justify-content: space-around
 }
